<resources>
    <string name="app_name">DataSending</string>
    <string name="linearlayout">Linear Layout</string>
    <string name="frame_layout">Frame Layout</string>
    <string name="relative_layout">Relative Layout</string>
    <string name="fr_layout">Frame Layout</string>
    <string name="coor_layout">Coordinator Layout</string>
    <string name="the_beautifully_sakuras">The Beautifully Sakura\'s</string>
    <string name="constraint_layout">Constraint Layout</string>
    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="indigo">Indigo</string>
    <string name="violet">Violet</string>
</resources>
